# gr-cntr

./: CMakeLists.txt  README
docs/: README.MyModules3
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  MyModules3_magic.xml
include/MyModules3/: CMakeLists.txt  api.h  magic.h
lib/: CMakeLists.txt  filter_impl.cc  magic_impl.cc  magic_impl.h  qa_MyModules3.cc  qa_MyModules3.h  test_MyModules3.cc
python/: CMakeLists.txt  __init__.py  qa_magic.py
swig/: CMakeLists.txt  MyModules3_swig.i
